telegram-desktop: switch to qt6, 3.7.2
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/libtg_owt/version
	modified:   gui/extra-cmake-modules/checksums
	modified:   gui/extra-cmake-modules/version
	new file:   gui/qt6-5compat/build
	new file:   gui/qt6-5compat/checksums
	new file:   gui/qt6-5compat/patches/qt6-base-cflags.patch
	new file:   gui/qt6-5compat/patches/qt6-base-nostrip.patch
	new file:   gui/qt6-5compat/sources
	new file:   gui/qt6-5compat/version
	new file:   gui/qt6-base/build
	new file:   gui/qt6-base/checksums
	new file:   gui/qt6-base/patches/qt6-base-cflags.patch
	new file:   gui/qt6-base/patches/qt6-base-nostrip.patch
	new file:   gui/qt6-base/sources
	new file:   gui/qt6-base/version
	new file:   gui/qt6-declarative/build
	new file:   gui/qt6-declarative/checksums
	new file:   gui/qt6-declarative/patches/qt6-base-cflags.patch
	new file:   gui/qt6-declarative/patches/qt6-base-nostrip.patch
	new file:   gui/qt6-declarative/sources
	new file:   gui/qt6-declarative/version
	new file:   gui/qt6-languageserver/build
	new file:   gui/qt6-languageserver/checksums
	new file:   gui/qt6-languageserver/patches/qt6-base-cflags.patch
	new file:   gui/qt6-languageserver/patches/qt6-base-nostrip.patch
	new file:   gui/qt6-languageserver/sources
	new file:   gui/qt6-languageserver/version
	new file:   gui/qt6-shadertools/build
	new file:   gui/qt6-shadertools/checksums
	new file:   gui/qt6-shadertools/patches/qt6-base-cflags.patch
	new file:   gui/qt6-shadertools/patches/qt6-base-nostrip.patch
	new file:   gui/qt6-shadertools/sources
	new file:   gui/qt6-shadertools/version
	new file:   gui/qt6-svg/build
	new file:   gui/qt6-svg/checksums
	new file:   gui/qt6-svg/patches/qt6-base-cflags.patch
	new file:   gui/qt6-svg/patches/qt6-base-nostrip.patch
	new file:   gui/qt6-svg/sources
	new file:   gui/qt6-svg/version
	new file:   gui/qt6-wayland/build
	new file:   gui/qt6-wayland/checksums
	new file:   gui/qt6-wayland

--- a/gui/telegram-desktop/build
+++ b/gui/telegram-desktop/build
@@ -1,9 +1,8 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
-export CFLAGS="${CFLAGS/-march=native/-march=x86-64-v3}"
 
 cmake -B build -G Ninja \
-    -D DESKTOP_APP_QT6=off \
+    -D DESKTOP_APP_QT6=on \
     -D CMAKE_INSTALL_PREFIX=/usr \
     -D CMAKE_BUILD_TYPE=Release \
     -D TDESKTOP_API_ID=611335 \
