icu: 71.1; rebuild revdepends
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/icu/checksums
	modified:   core/icu/version
	modified:   core/libxml2/version
	modified:   core/nodejs/version
	modified:   core/xfsprogs/version
	modified:   extra/boost/version
	modified:   extra/libical/version
	modified:   extra/php/version
	modified:   extra/samba/version
	modified:   gnome/evolution-data-server/version
	modified:   gnome/freerdp/version
	modified:   gnome/gnome-text-editor/version
	modified:   gnome/gspell/version
	modified:   gnome/tracker3-miners/version
	modified:   gnome/tracker3/version
	modified:   gnome/vte3/version
	modified:   gui/darktable/version
	modified:   gui/firefox/build
	modified:   gui/firefox/version
	modified:   gui/harfbuzz/version
	modified:   gui/qt5-base/version
	modified:   gui/qt6-5compat/version
	modified:   gui/qt6-base/version
	modified:   gui/telegram-desktop/version
	modified:   gui/webkit2gtk/build
	modified:   gui/webkit2gtk/version

--- a/gui/firefox/build
+++ b/gui/firefox/build
@@ -33,7 +33,7 @@ export MACH_USE_SYSTEM_PYTHON=1
 export MOZBUILD_STATE_PATH="$PWD/mozbuild"
 
 ulimit -n 4096
-yes y | ./mach build -j12
+yes y | ./mach build -j`nproc`
 ./mach buildsymbols
 DESTDIR="$1" ./mach install
 
