fix infodir by removing bundled version from packages
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/autoconf/build
	modified:   core/autoconf/version
	modified:   core/automake/build
	modified:   core/automake/version
	modified:   core/bash/build
	modified:   core/bash/version
	modified:   core/bc/build
	modified:   core/bc/version
	modified:   core/binutils/build
	modified:   core/binutils/version
	modified:   core/bison/build
	modified:   core/bison/version
	modified:   core/coreutils/build
	modified:   core/coreutils/version
	modified:   core/diffutils/build
	modified:   core/diffutils/version
	modified:   core/ed/build
	modified:   core/ed/version
	modified:   core/findutils/build
	modified:   core/findutils/version
	modified:   core/flex/build
	modified:   core/flex/version
	modified:   core/gawk/build
	modified:   core/gawk/version
	modified:   core/gdb/build
	modified:   core/gdb/version
	modified:   core/gdbm/build
	modified:   core/gdbm/version
	modified:   core/gettext/build
	modified:   core/gettext/version
	modified:   core/glibc/build
	modified:   core/gmp/build
	modified:   core/gmp/version
	modified:   core/gnupg/build
	modified:   core/gnupg/version
	modified:   core/grep/build
	modified:   core/grep/version
	modified:   core/grub/build
	modified:   core/grub/version
	modified:   core/libassuan/build
	modified:   core/libassuan/version
	modified:   core/libffi/build
	modified:   core/libffi/version
	modified:   core/libgcrypt/build
	modified:   core/libgcrypt/version
	modified:   core/libidn2/build
	modified:   core/libidn2/version
	modified:   core/libksba/build
	modified:   core/libksba/version
	modified:   core/libmpc/build
	modified:   core/libmpc/version
	modified:   core/libtool/build
	modified:   core/libtool/version
	modified:   core/libunistring/build
	modified:   core/libunistring/version
	modified:   core/lzip/build
	modified:   core/lzip/version
	modified:   core/m4/build
	modified:   co

--- a/core/binutils/build
+++ b/core/binutils/build
@@ -34,3 +34,4 @@ make DESTDIR="$1" tooldir=/usr install
 
 echo 'INPUT( /usr/lib/libbfd.a -liberty -lz -ldl )' > "$1/usr/lib/libbfd.so"
 echo 'INPUT( /usr/lib/libopcodes.a -lbfd )' > "$1/usr/lib/libopcodes.so"
+rm -f $1/usr/share/info/dir
