add wayfire, install wlroots-git in parallel under wlroots-16
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	new file:   gui/doctest/build
	new file:   gui/doctest/sources
	new file:   gui/doctest/version
	new file:   gui/glm/build
	new file:   gui/glm/checksums
	new file:   gui/glm/files/glm.pc.in
	new file:   gui/glm/files/glmConfig.cmake.in
	new file:   gui/glm/files/glmConfigVersion.cmake.in
	new file:   gui/glm/files/glmTargets.cmake
	new file:   gui/glm/sources
	new file:   gui/glm/version
	new file:   gui/rofi/build
	new file:   gui/rofi/sources
	new file:   gui/rofi/version
	modified:   gui/sway/build
	modified:   gui/sway/checksums
	new file:   gui/sway/patches/use-wlroots-16.patch
	modified:   gui/sway/sources
	modified:   gui/sway/version
	new file:   gui/wayfire/build
	new file:   gui/wayfire/checksums
	new file:   gui/wayfire/patches/allow-git-wlroots.patch
	new file:   gui/wayfire/patches/force-xwayland-enable.patch
	new file:   gui/wayfire/sources
	new file:   gui/wayfire/version
	new file:   gui/wf-config/build
	new file:   gui/wf-config/sources
	new file:   gui/wf-config/version
	new file:   gui/wlroots-16/build
	new file:   gui/wlroots-16/checksums
	new file:   gui/wlroots-16/depends
	new file:   gui/wlroots-16/sources
	new file:   gui/wlroots-16/version
	modified:   gui/wlroots/build
	modified:   gui/wlroots/version
	new file:   gui/wlsunset/build
	new file:   gui/wlsunset/sources
	new file:   gui/wlsunset/version
	new file:   gui/xcb-util-cursor/build
	new file:   gui/xcb-util-cursor/checksums
	new file:   gui/xcb-util-cursor/depends
	new file:   gui/xcb-util-cursor/sources
	new file:   gui/xcb-util-cursor/version

--- a/gui/sway/build
+++ b/gui/sway/build
@@ -1,11 +1,13 @@
 #!/bin/sh -uxe
-
 export DESTDIR="$1"
+
+# Since this package needs wlroots git, make it use our custom wlroots-16 install
+patch -Np1 -i use-wlroots-16.patch
 
 meson build \
     -D prefix=/usr \
     -D man-pages=disabled \
     -D werror=false
 
-ninja -C build
+ninja -C build --verbose 
 ninja -C build install
