--- a/gui/wf-config/build
+++ b/gui/wf-config/build
@@ -1,9 +1,9 @@
 #!/bin/sh -uxe
-
 export DESTDIR="$1"
 
-meson build \
-    -D prefix=/usr 
 zsh
+meson build \
+    ${MESON_OPTIONS} 
+
 ninja -C build
 ninja -C build install
