--- a/gui/wlsunset/build
+++ b/gui/wlsunset/build
@@ -1,9 +1,8 @@
 #!/bin/sh -uxe
-
 export DESTDIR="$1"
 
 meson build \
-    -D prefix=/usr 
-zsh
+    ${MESON_OPTIONS}
+
 ninja -C build
 ninja -C build install
