--- a/gui/gmic/build
+++ b/gui/gmic/build
@@ -1,7 +1,8 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
-patch -Np1 -i fix-cmake-build.patch
+mkdir -p cmake
+mv *.cmake cmake/
 
 cmake -B build -G Ninja \
     -D CMAKE_INSTALL_PREFIX=/usr \
