gcc: add fortran and d support
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/gcc/build
	modified:   core/gcc/checksums
	modified:   core/gcc/version

--- a/core/gcc/build
+++ b/core/gcc/build
@@ -47,7 +47,7 @@ export libat_cv_have_ifunc=yes
     --enable-lto \
     --enable-tls \
     --with-isl \
-    --enable-languages=c,c++,lto,objc,obj-c++,go \
+    --enable-languages=c,c++,lto,objc,obj-c++,go,fortran,d \
     --without-included-gettext \
     --with-system-zlib \
     --with-gmp=/usr \
