--- a/extra/cyrus-sasl/build
+++ b/extra/cyrus-sasl/build
@@ -1,17 +1,6 @@
 #!/bin/sh -uxe
 
-for i in *.patch; do
-    patch -Np1 -i $i
-done
-
-rm -f config/config.{guess,stub}
-rm  -f config/lt{config,main.sh} config/libtool.m4
-
-libtoolize -c
-aclocal -I config
-automake -ac
-autoheader
-autoconf
+autoreconf -fiv
 
 ./configure --prefix=/usr \
     --sbin=/usr/bin \
@@ -43,7 +32,9 @@ autoconf
     --with-pam \
     --with-saslauthd=/var/run/saslauthd \
     --with-ldap \
-    --with-dblib=lmdb \
+    --with-mysql=/usr \
+    --with-pgsql=/usr \
+    --with-dblib=gdbm \
     --with-configdir=/etc/sasl2:/etc/sasl:/usr/lib/sasl2 \
     --sysconfdir=/etc \
     --with-devrandom=/dev/urandom
