--- a/extra/samba/build
+++ b/extra/samba/build
@@ -1,5 +1,7 @@
 #!/bin/sh -uxe
 
+patch -Rp1 -i *.patch
+
 _samba4_idmap_modules=idmap_ad,idmap_rid,idmap_adex,idmap_hash,idmap_tdb2
 _samba4_pdb_modules=pdb_tdbsam,pdb_ldap,pdb_ads,pdb_smbpasswd,pdb_wbc_sam,pdb_samba4
 _samba4_auth_modules=auth_unix,auth_wbc,auth_server,auth_netlogond,auth_script,auth_samba4
