polkit: latest git rev, fix redefinition in glib2 header
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   gnome/polkit/build
	modified:   gnome/polkit/checksums
	deleted:    gnome/polkit/patches/meson-0.61.patch
	modified:   gnome/polkit/sources
	modified:   gnome/polkit/version

--- a/gnome/polkit/build
+++ b/gnome/polkit/build
@@ -1,6 +1,9 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+# Fix redefinition by glib2
+patch -Rp1 -i 63c02dc9e80e99e38c04514917a49a574e344e36.patch
+
 meson build \
     -D session_tracking=libsystemd-login \
     -D os_type=redhat \
