ndctl: 73, add asciidoctor
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	new file:   extra/asciidoctor/build
	new file:   extra/asciidoctor/checksums
	new file:   extra/asciidoctor/sources
	new file:   extra/asciidoctor/version
	modified:   extra/ndctl/build
	modified:   extra/ndctl/checksums
	modified:   extra/ndctl/version

--- a/extra/ndctl/build
+++ b/extra/ndctl/build
@@ -1,14 +1,12 @@
 #!/bin/sh -uxe
+export DESTDIR="$1"
 
-sed -i "s|^modprobedir =.*|modprobedir = /usr/lib/modprobe.d/|" Makefile.am
+sed -i "s|^modprobedir =.*|modprobedir = /usr/lib/modprobe.d/|" contrib/meson.build
 
-./autogen.sh
+export CFLAGS+=" -ffat-lto-objects" 
 
-./configure \
-    --prefix=/usr \
-    --sysconfdir=/etc \
-    --disable-docs \
-    --with-systemd
+meson build \
+    ${MESON_OPTIONS}
 
-make
-make DESTDIR="$1" install
+ninja -C build
+ninja -C build install
