ncurses: fix pkgconfig and library issues
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/ncurses/build
	modified:   core/ncurses/checksums
	new file:   core/ncurses/patches/ncurses-6.3-libs.patch
	new file:   core/ncurses/patches/ncurses-6.3-pkgconfig.patch
	modified:   core/ncurses/sources
	modified:   core/ncurses/version

--- a/core/ncurses/build
+++ b/core/ncurses/build
@@ -1,33 +1,41 @@
 #!/bin/sh -uxe
 
+patch -Np1 -i ncurses-6.3-libs.patch
+patch -Np1 -i ncurses-6.3-pkgconfig.patch
+
 ./configure \
     --prefix=/usr \
-    --mandir=/usr/share/man \
+    --enable-widec \
     --enable-pc-files \
+    --mandir=/usr/share/man \
     --disable-rpath-hack \
+    --with-cxx-binding \
+    --with-cxx-shared \
+    --with-manpage-format=normal \
     --with-pkg-config-libdir=/usr/lib/pkgconfig \
     --with-shared \
-    --enable-widec \
+    --with-versioned-syms \
+    --with-term-kbs=del \
     --without-ada \
-    --without-tests \
-    --with-debug \
-    --with-cxx-binding
 
 make 
 make DESTDIR="$1" install
 
-# force ncurses to link against wide-char ncurses 
-for lib in ncurses form panel menu; do
-	rm -f "$1/usr/lib/lib${lib}.so" 
-	printf '%s\n' "INPUT(-l${lib}w)" > "$1/usr/lib/lib${lib}.so"
-	chmod 755 "$1/usr/lib/lib${lib}.so"
-	ln -sf "lib${lib}w.a" "$1/usr/lib/lib${lib}.a"
+
+# fool packages looking to link to non-wide-character ncurses libraries
+for lib in ncurses ncurses++ form panel menu; do
+    printf "INPUT(-l%sw)\n" "${lib}" > "$1/usr/lib/lib${lib}.so"
+    ln -sv ${lib}w.pc "$1/usr/lib/pkgconfig/${lib}.pc"
 done
 
-# Some packages look for libcurses instead of libncurses
-printf "%s\n" "INPUT(-lncursesw)" > "$1/usr/lib/libcursesw.so"
-ln -s libncurses.so "$1/usr/lib/libcurses.so"
-ln -s libncurses.so "$1/usr/lib/libtinfo.5"
-ln -s libncurses.so "$1/usr/lib/libtinfo.so.5"
+# some packages look for -lcurses during build
+printf 'INPUT(-lncursesw)\n' > "$1/usr/lib/libcursesw.so"
+ln -sv libncurses.so "$1/usr/lib/libcurses.so"
 
-ln -s ncursesw.pc "$1"/usr/lib/pkgconfig/ncurses.pc
+# tic and ticinfo functionality is built in by default
+# make sure that anything linking against it links against libncursesw.so instead
+for lib in tic tinfo; do
+    printf "INPUT(libncursesw.so.%s)\n" "${2:0:1}" > "$1/usr/lib/lib${lib}.so"
+    ln -sv libncursesw.so.${2:0:1} "$1/usr/lib/lib${lib}.so.${2:0:1}"
+    ln -sv ncursesw.pc "$1/usr/lib/pkgconfig/${lib}.pc"
+done
