--- a/extra/intel-media-sdk/build
+++ b/extra/intel-media-sdk/build
@@ -1,17 +1,19 @@
 #!/bin/sh -uxe
-
 export DESTDIR="$1"
 
-export CFLAGS+=" -flto -ffat-lto-objects"
-export CXXFLAGS+=" -flto -ffat-lto-objects"
+export CFLAGS+=" -flto=auto -ffat-lto-objects"
+# Fix gtest compilation
+export CXXFLAGS+=" -flto=auto -ffat-lto-objects -Wno-error=restrict"
 
 cmake -B build -G Ninja \
     -D BUILD_ALL=ON \
     -D BUILD_TOOLS=ON \
     -D CMAKE_BUILD_TYPE=None \
     -D CMAKE_INSTALL_PREFIX=/usr \
+    -D CMAKE_INSTALL_LIBDIR=lib \
     -D ENABLE_ITT=OFF \
     -D ENABLE_OPENCL=OFF \
+    -D BUILD_TESTS=OFF \
     -D ENABLE_WAYLAND=ON \
     -D ENABLE_X11_DRI3=ON \
     -D MFX_APPS_DIR=/usr/lib/mfx \
