--- a/core/rust/build
+++ b/core/rust/build
@@ -1,5 +1,4 @@
 #!/bin/sh -uxe
-
 export DESTDIR="$1"
 
 # Move credential helpers from libexec to lib
@@ -11,6 +10,14 @@ patch -Np1 -i 0002-compiler-Change-LLVM-targets.patch
 
 # Use LLVMs wasm-ld
 patch -Np1 -i 0003-compiler-Use-wasm-ld-for-wasm-targets.patch
+
+# Fix libgit2 segmentation fault in cargo
+patch -d src/tools/cargo -Np1 < 2ff0b401b9c79a44789a71eb53d83d422bb9b200.patch
+cd src/tools/cargo
+cargo fetch
+cd ../../..
+
+cargo vendor
 
 cat > config.toml << EOF
 changelog-seen = 2
@@ -24,7 +31,9 @@ target = [
   "x86_64-unknown-linux-gnu",
   "wasm32-unknown-unknown",
 ]
-
+cargo = "/usr/bin/cargo"
+rustc = "/usr/bin/rustc"
+rustfmt = "/usr/bin/rustfmt"
 locked-deps = true
 vendor = true
 tools = ["cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"]
@@ -65,6 +74,10 @@ EOF
 
 export RUST_BACKTRACE=1
 
-python3 x.py
-python3 x.py doc
-python3 x.py install
+python3 x.py install $MAKEFLAGS
+
+rm "$1"/usr/lib/rustlib/{components,install.log,rust-installer-version,uninstall.sh}
+rm "$1"/usr/lib/rustlib/manifest-*
+
+mkdir -p "$1"/usr/share/bash-completion
+mv "$1"/etc/bash_completion.d "$1"/usr/share/bash-completion/completions
