telegram-desktop: fix abseil and tg_owt issues with gcc 12
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/abseil-cpp/build
	modified:   extra/abseil-cpp/version
	modified:   extra/libtg_owt/build
	new file:   extra/libtg_owt/checksums
	new file:   extra/libtg_owt/patches/gcc12-fix-missing-stdint-include.patch
	modified:   extra/libtg_owt/sources
	modified:   extra/libtg_owt/version
	modified:   gui/telegram-desktop/version

--- a/extra/abseil-cpp/build
+++ b/extra/abseil-cpp/build
@@ -1,6 +1,17 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+# GCC 12 is broken, so use clang
+export CC=clang
+export CXX=clang++
+export LD=ld.lld
+export AS=llvm-as
+export RANLIB=llvm-ranlib
+
+export CXXFLAGS+=" -lc++abi -stdlib=libc++"
+export LDFLAGS+=" -lc++abi -stdlib=libc++"
+export CFLAGS+=" -lc++abi -stdlib=libc++"
+
 cmake -B build -G Ninja \
     -D CMAKE_BUILD_TYPE=RelWithDebInfo \
     -D CMAKE_CXX_FLAGS="-DNEBUG" \
