lvm2, cryptsetup: add initcpio hooks
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/cryptsetup/build
	modified:   extra/cryptsetup/checksums
	new file:   extra/cryptsetup/files/hooks-encrypt
	new file:   extra/cryptsetup/files/install-encrypt
	new file:   extra/cryptsetup/files/install-sd-encrypt
	modified:   extra/cryptsetup/sources
	modified:   extra/cryptsetup/version
	modified:   extra/lvm2/build
	modified:   extra/lvm2/checksums
	new file:   extra/lvm2/depends
	new file:   extra/lvm2/files/lvm2_install
	new file:   extra/lvm2/patches/0001-udev-initcpio.patch
	modified:   extra/lvm2/sources
	modified:   extra/lvm2/version
	new file:   extra/thin-provisioning-tools/build
	new file:   extra/thin-provisioning-tools/checksums
	new file:   extra/thin-provisioning-tools/sources
	new file:   extra/thin-provisioning-tools/version

--- a/extra/cryptsetup/build
+++ b/extra/cryptsetup/build
@@ -11,3 +11,8 @@ sed -i "s| -shared | ${LDFLAGS}\0|g" libtool
 
 make
 make DESTDIR="$1" install
+
+install -Dm644 hooks-encrypt "$1"/usr/lib/initcpio/hooks/encrypt
+install -Dm644 install-encrypt "$1"/usr/lib/initcpio/install/encrypt
+install -Dm644 install-sd-encrypt "$1"/usr/lib/initcpio/install/sd-encrypt
+
