--- a/core/linux-kernel/files/config
+++ b/core/linux-kernel/files/config
@@ -6474,7 +6474,7 @@ CONFIG_AGP_SIS=m
 CONFIG_AGP_VIA=m
 CONFIG_INTEL_GTT=m
 CONFIG_VGA_SWITCHEROO=y
-CONFIG_DRM=m
+CONFIG_DRM=y
 CONFIG_DRM_MIPI_DBI=m
 CONFIG_DRM_MIPI_DSI=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
@@ -6512,7 +6512,7 @@ CONFIG_DRM_I2C_NXP_TDA9950=m
 
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_USERPTR=y
-CONFIG_DRM_AMDGPU=m
+CONFIG_DRM_AMDGPU=y
 CONFIG_DRM_AMDGPU_SI=y
 CONFIG_DRM_AMDGPU_CIK=y
 CONFIG_DRM_AMDGPU_USERPTR=y
@@ -6543,7 +6543,7 @@ CONFIG_NOUVEAU_DEBUG_DEFAULT=3
 # CONFIG_NOUVEAU_DEBUG_PUSH is not set
 CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 CONFIG_DRM_NOUVEAU_SVM=y
-CONFIG_DRM_I915=m
+CONFIG_DRM_I915=y
 CONFIG_DRM_I915_FORCE_PROBE="*"
 CONFIG_DRM_I915_CAPTURE_ERROR=y
 CONFIG_DRM_I915_COMPRESS_ERROR=y
