--- a/gui/mesa/build
+++ b/gui/mesa/build
@@ -2,9 +2,8 @@
 export DESTDIR="$1"
 
 # Minimal debug info; #6229
-export CFLAGS+=" -g1 -mtls-dialect=gnu"
-export CXXFLAGS+=" -g1 -mtls-dialect=gnu"
-
+export CFLAGS+=" -g1 -mtls-dialect=gnu -flto=auto -ffat-lto-objects"
+export CXXFLAGS+=" -g1 -mtls-dialect=gnu -flto=auto -ffat-lto-objects"
 
 meson build \
     -D b_ndebug=true \
@@ -34,7 +33,7 @@ meson build \
     -D shared-glapi=enabled \
     -D microsoft-clc=disabled \
     -D valgrind=enabled \
-    ${MESON_OPTIONS/-D b_lto=true}
+    ${MESON_OPTIONS}
 
 meson configure build
 
