plymouth: switch to stable, add required fonts
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	new file:   extra/perl-font-ttf/build
	new file:   extra/perl-font-ttf/checksums
	new file:   extra/perl-font-ttf/sources
	new file:   extra/perl-font-ttf/version
	new file:   extra/perl-io-string/build
	new file:   extra/perl-io-string/checksums
	new file:   extra/perl-io-string/sources
	new file:   extra/perl-io-string/version
	new file:   extra/ttf-dejavu/build
	new file:   extra/ttf-dejavu/sources
	new file:   extra/ttf-dejavu/version
	modified:   gui/plymouth/build
	modified:   gui/plymouth/version

--- a/gui/plymouth/build
+++ b/gui/plymouth/build
@@ -15,16 +15,15 @@ NOCONFIGURE=1 ./autogen.sh
     --libdir=/usr/lib \
     --libexecdir=/usr/lib \
     --sbindir=/usr/bin \
-    --with-runtimedir=/run \
     --enable-systemd-integration \
     --enable-drm \
     --enable-tracing \
     --enable-pango \
-    --enable-gtk=no \
+    --enable-gtk=yes \
     --with-release-file=/etc/os-release \
     --with-logo=/usr/share/plymouth/mkiss.png \
-    --with-background-color=0x000000 \
-    --with-background-start-color-stop=0x000000 \
+    --with-background-color=0x4D4D4D \
+    --with-background-start-color-stop=0x4D4D4D \
     --with-background-end-color-stop=0x4D4D4D \
     --without-rhgb-compat-link \
     --without-system-root-install 
