pamixer: 1.6, add cxxopts dependency
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	new file:   extra/cxxopts/build
	new file:   extra/cxxopts/sources
	new file:   extra/cxxopts/version
	modified:   extra/pamixer/build
	modified:   extra/pamixer/checksums
	modified:   extra/pamixer/version

--- a/extra/pamixer/build
+++ b/extra/pamixer/build
@@ -1,7 +1,8 @@
 #!/bin/sh -uxe
+export DESTDIR="$1"
 
-export CXXFLAGS+=" -DVERSION=${2}"
+meson build \
+    ${MESON_OPTIONS}
 
-make
-install -Dm755 pamixer "$1"/usr/bin/pamixer
-install -Dm644 pamixer.1 -t "$1"/usr/share/man/man1
+ninja -C build
+ninja -C build install
