protobuf: 21.1; android-tools, protobuf-c, usbguard: rebuild relbump
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/protobuf-c/version
	modified:   extra/android-tools/build
	modified:   extra/android-tools/checksums
	new file:   extra/android-tools/patches/gcc12.patch
	modified:   extra/android-tools/sources
	modified:   extra/android-tools/version
	modified:   extra/protobuf/checksums
	modified:   extra/protobuf/version
	modified:   gnome/usbguard/version

--- a/extra/android-tools/build
+++ b/extra/android-tools/build
@@ -1,11 +1,15 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+patch -Np1 -i gcc12.patch
+
 cmake -B build -G Ninja \
     -D CMAKE_INSTALL_PREFIX=/usr \
     -D CMAKE_BUILD_TYPE=Release \
     -D CMAKE_C_FLAGS="${CFLAGS}" \
     -D CMAKE_CXX_FLAGS="${CXXFLAGS}"
+
+sed -i "s|-Werror|-Wno-error|g" build/build.ninja
 
 ninja -C build
 ninja -C build install
