qt6-*: 6.3.1, telegram-desktop/libtg_owt: latest git
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/libtg_owt/version
	modified:   gui/qt6-5compat/checksums
	modified:   gui/qt6-5compat/version
	modified:   gui/qt6-base/checksums
	modified:   gui/qt6-base/version
	modified:   gui/qt6-declarative/checksums
	modified:   gui/qt6-declarative/version
	modified:   gui/qt6-languageserver/checksums
	modified:   gui/qt6-languageserver/version
	modified:   gui/qt6-shadertools/checksums
	modified:   gui/qt6-shadertools/version
	modified:   gui/qt6-svg/checksums
	modified:   gui/qt6-svg/version
	modified:   gui/qt6-wayland/checksums
	modified:   gui/qt6-wayland/version
	modified:   gui/telegram-desktop/build
	modified:   gui/telegram-desktop/checksums
	new file:   gui/telegram-desktop/patches/tgcalls-uint8t-gcc12.patch
	modified:   gui/telegram-desktop/sources
	modified:   gui/telegram-desktop/version

--- a/gui/telegram-desktop/build
+++ b/gui/telegram-desktop/build
@@ -1,6 +1,11 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+git submodule init
+git submodule update --recursive
+
+patch -d Telegram/ThirdParty/tgcalls -Np1 < tgcalls-uint8t-gcc12.patch
+
 cmake -B build -G Ninja \
     -D DESKTOP_APP_QT6=on \
     -D CMAKE_INSTALL_PREFIX=/usr \
