srt: 1.5.0, ffmpeg relbump
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/ffmpeg/build
	modified:   extra/ffmpeg/version
	modified:   extra/srt/version

--- a/extra/ffmpeg/build
+++ b/extra/ffmpeg/build
@@ -1,5 +1,8 @@
 #!/bin/sh -uxe
 
+export CFLAGS+=" -flto=auto"
+export CXXFLAGS+=" -flto=auto"
+
 ./configure \
     --prefix=/usr \
     --disable-debug \
