--- a/core/rust/build
+++ b/core/rust/build
@@ -22,9 +22,9 @@ link-shared = true
 target = [
   "x86_64-unknown-linux-gnu",
 ]
-cargo = "/usr/bin/cargo"
-rustc = "/usr/bin/rustc"
-rustfmt = "/usr/bin/rustfmt"
+cargo = "$(which cargo)"
+rustc = "$(which rustc)"
+rustfmt = "$(which rustfmt)"
 locked-deps = true
 vendor = true
 tools = ["cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"]
