hwdata: 0.361, remove duplicate pci.ids from pciutils
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/hwdata/version
	modified:   core/pciutils/build
	modified:   core/pciutils/depends
	modified:   core/pciutils/version

--- a/core/pciutils/build
+++ b/core/pciutils/build
@@ -7,3 +7,7 @@ cp lib/libpci.a .
 make clean
 make OPT="${CFLAGS} -DPIC" ZLIB=no SHARED=yes PREFIX=/usr SHAREDIR=/usr/share/hwdata MANDIR=/usr/share/man SBINDIR=/usr/bin all
 make SHARED=yes PREFIX=/usr SHAREDIR=/usr/share/hwdata MANDIR=/usr/share/man SBINDIR=/usr/bin DESTDIR="$1" install install-lib
+
+# provided by hwdata
+rm "$1"/usr/share/hwdata/pci.ids
+
