--- a/gui/imagemagick/build
+++ b/gui/imagemagick/build
@@ -36,3 +36,5 @@ sed -i "s| -shared | ${LDFLAGS}\0|g" libtool
 
 make
 make DESTDIR="$1" install
+
+find "$1" -name .packlist -o -name perllocal.pod -delete
